package org.scanner.port;

public enum Status {
    OPEN,
    CLOSED
}
